[package]
name = "cc7800"
version = "0.2.23"
edition = "2021"
authors = ["Bruno STEUX <bruno.steux@gmail.com>"]
license = "GPL-3.0-or-later"
description = "a subset of C compiler for Atari 7800"
readme = "README.md"
homepage = "https://github.com/steux/cc7800"
repository = "https://github.com/steux/cc7800"
keywords = ["cli", "atari7800", "compiler", "gamedev"]
categories = ["command-line-utilities", "game-development", "compilers"]

[dependencies]
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
cc6502 = { version = "1.0", features = ["atari7800"] }
#cc6502 = { path = "../cc6502", features = ["atari7800"] }
